<resources>
    <string name="app_name">Osh Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_favorites_activity">Favorites</string>
    <string name="edit_title">Edit Movie</string>
    <string name="create_title">Create Movie</string>
    <string name="genre">Genre:</string>
    <string name="plot">Plot:</string>
    <string name="year">Year:</string>
    <string name="language">Language:</string>
    <string name="title">Title:</string>
    <string name="hint_title">Enter Title</string>
    <string name="hint_year">Enter Year</string>
    <string name="hint_genre">Enter Genre</string>
    <string name="hint_language">Enter Language</string>
    <string name="rating">Rating:</string>
    <string name="hint_plot">Enter Plot</string>
    <string name="poster">Poster:</string>
    <string name="hint_poster_url">Enter Poster URL</string>
    <string name="hint_search">Enter Movie Name</string>
    <string name="show">SHOW</string>
    <string name="add_poster">ADD POSTER</string>
    <string name="last_poster">LAST POSTER</string>

    <string-array name="option_add_poster">
        <item>Web</item>
        <item>Local</item>
    </string-array>

</resources>
