<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditMovieActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/title"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:hint="@string/hint_title"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/et_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/year"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_year"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/et_year" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/genre"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:hint="@string/hint_genre"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/et_genre" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/language"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:hint="@string/hint_language"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/et_language" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/rating"
                    android:layout_gravity="center_vertical"
                    />

               <RatingBar
                   android:id="@+id/rb_rating"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:numStars="5"
                   android:layout_marginLeft="5dp"
                   android:layout_marginStart="5dp"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/plot"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_plot"
                    android:minLines="2"
                    android:layout_marginTop="5dp"
                    android:id="@+id/et_plot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/tv_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:text="@string/poster"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        />

                    <Button
                        android:id="@+id/b_last_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/last_poster"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        />

                    <Spinner
                        android:id="@+id/s_options_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/option_add_poster"
                        android:spinnerMode="dropdown"
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tv_poster"
                        android:layout_toEndOf="@id/tv_poster"
                        android:layout_toLeftOf="@id/b_last_poster"
                        android:layout_toStartOf="@id/b_last_poster"
                        />



                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_web_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    >

                    <Button
                        android:id="@+id/b_show_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        />

                    <EditText
                        android:id="@+id/et_poster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/b_show_poster"
                        android:layout_toStartOf="@id/b_show_poster"
                        android:hint="@string/hint_poster_url"
                        />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_local_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    >

                    <Button
                        android:id="@+id/b_add_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_poster"
                        android:layout_centerHorizontal="true"
                        />

                </RelativeLayout>

                <include layout="@layout/poster_layout"
                         android:layout_width="@dimen/movie_info_poster_width"
                         android:layout_height="@dimen/movie_info_poster_height"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="5dp"
                         />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
