<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MovieInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp"

            android:paddingBottom="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        <include layout="@layout/poster_layout"
                 android:layout_width="@dimen/movie_info_poster_width"
                 android:layout_height="@dimen/movie_info_poster_height"
                 android:layout_gravity="center_horizontal"
                 />


        <RatingBar
               android:id="@+id/rb_rating"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:numStars="5"
               android:isIndicator="true"
               android:layout_gravity="center_horizontal"
               />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/year"/>

           <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                />

        </LinearLayout>



        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/genre"/>

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                />

        </LinearLayout>

         <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/language"/>

             <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="23sp"
                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/plot"/>

        <TextView
            android:id="@+id/tv_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            />

        </LinearLayout>


    </ScrollView>



</LinearLayout>
